log
Wed 20 Mar 2024 08:17:36 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:8: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |        push_back(L, dato);
      |        ^~~~~~~~~
      |        pushBack
cc1: all warnings being treated as errors
Compilation failed
f0f5d9d
Wed 20 Mar 2024 08:18:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
a212a7b
Wed 20 Mar 2024 08:37:10 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
900d7be
Wed 20 Mar 2024 08:52:34 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
5ede80b
Sun 24 Mar 2024 12:37:25 AM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
ad9c399
Sun 24 Mar 2024 12:37:56 AM UTC: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
9abdc21
